# HWL-SaveEditor

./: .gitignore  README.md  ZeldaHWLSaveEditor.sln  ZeldaHWLSaveEditor.vcxproj  ZeldaHWLSaveEditor.vcxproj.filters  ZeldaHWLSaveEditorGUI.vcxproj  ZeldaHWLSaveEditorGUI.vcxproj.filters  settings.cfg
source/: CMakeLists.txt
source/console/: CMakeLists.txt  ZeldaHWLSaveEditorConsole.aps  ZeldaHWLSaveEditorConsole.rc  main.cpp  resource.h
source/core/: CMakeLists.txt  HWLAdventureModeItems.cpp  HWLAdventureModeItems.h  HWLAdventureModeMaps.cpp  HWLAdventureModeMaps.h  HWLConfig.cpp  HWLConfig.h  HWLException.cpp  HWLException.h  HWLFairy.cpp  HWLFairy.h  HWLFairyFood.cpp  HWLFairyFood.h  HWLGeneral.cpp  HWLGeneral.h  HWLHttp.cpp  HWLHttp.h  HWLMaterial.cpp  HWLMaterial.h  HWLPlayer.cpp  HWLPlayer.h  HWLSaveEditor.cpp  HWLSaveEditor.h  HWLSaveEditorCore.cpp  HWLSaveEditorCore.h  HWLWeapon.cpp  HWLWeapon.h
source/gui/: ZeldaAboutDlg.cpp  ZeldaAboutDlg.h  ZeldaCheckForUpdatesDlg.cpp  ZeldaCheckForUpdatesDlg.h  ZeldaConfigWeaponCopyDlg.cpp  ZeldaConfigWeaponCopyDlg.h  ZeldaEditAdventureModeItem.cpp  ZeldaEditAdventureModeItem.h  ZeldaEditAdventureModeMaps.cpp  ZeldaEditAdventureModeMaps.h  ZeldaEditCharaOverviewDlg.cpp  ZeldaEditCharaOverviewDlg.h  ZeldaEditCharaStatsDlg.cpp  ZeldaEditCharaStatsDlg.h  ZeldaEditCharaWeaponsDlg.cpp  ZeldaEditCharaWeaponsDlg.h  ZeldaEditFairyDlg.cpp  ZeldaEditFairyDlg.h  ZeldaEditFairyFoods.cpp  ZeldaEditFairyFoods.h  ZeldaEditGeneralDlg.cpp  ZeldaEditGeneralDlg.h  ZeldaEditMaterials.cpp  ZeldaEditMaterials.h  ZeldaHWLSaveEditorGUI.aps  ZeldaHWLSaveEditorGUI.cpp  (+5 more)
(+15 files in other folders)
